--- a/CHAPTER_09b_Mathematics_for_Computer_Vision.ipynb
+++ b/CHAPTER_09b_Mathematics_for_Computer_Vision.ipynb
@@ -171,11 +171,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 483
         },
-        "outputId": "dd3a7a11-d38a-4c59-ade4-cdcc61a2e7a7"
+        "outputId": "18e3db84-aaf5-45ec-ecee-26f735e7869c"
       },
       "cell_type": "code",
       "source": [
         "from scipy.stats import bernoulli\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# parameters\n",
@@ -193,7 +194,7 @@
         "plt.vlines(x,0,f)\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -237,7 +238,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 483
         },
-        "outputId": "d9d54cbe-7869-4b3f-b3af-b868c243f2a1"
+        "outputId": "4cd6b400-e95c-4435-9169-1dc1199afae7"
       },
       "cell_type": "code",
       "source": [
@@ -261,7 +262,7 @@
         "plt.vlines(x,0,f)\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -305,11 +306,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 483
         },
-        "outputId": "4be3104a-069c-4cf9-a230-1d912ef8f0b7"
+        "outputId": "5a91259a-9025-451e-eb1f-77046eb7d4b0"
       },
       "cell_type": "code",
       "source": [
         "from scipy.stats import poisson\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# parameters\n",
@@ -327,7 +329,7 @@
         "plt.vlines(x,0,f)\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -376,11 +378,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 483
         },
-        "outputId": "8baccbd9-f3f3-4256-b469-feabee968da6"
+        "outputId": "24db7b82-ed5d-492e-ed45-1460f405355b"
       },
       "cell_type": "code",
       "source": [
         "from scipy.stats import uniform\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# assign distribution\n",
@@ -395,7 +398,7 @@
         "plt.vlines(x,0,f)\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -439,11 +442,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 483
         },
-        "outputId": "8db58d6e-b71c-4427-ced8-557c515a01d5"
+        "outputId": "b42182f2-75ea-4d0a-9fcc-38204d0824f3"
       },
       "cell_type": "code",
       "source": [
         "from scipy.stats import norm\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# assign distribution\n",
@@ -458,7 +462,7 @@
         "plt.vlines(x,0,f)\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
