--- a/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
+++ b/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
@@ -101,6 +101,72 @@
     },
     {
       "metadata": {
+        "id": "54B5_2wICthF",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Accuracy**"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "W1fh-tjACwqY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Proportion of correct predictions"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "C2p2wy7VDB8i",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "$Accuracy=\\frac{TP+TN}{TP+TN+FP+FN}$"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "OJS0JeL9C1K4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "51614b6a-8948-4f42-8d1c-046c0f31592c"
+      },
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "import numpy as np\n",
+        "\n",
+        "true_y = np.array([1,2,3,2,3,3,1,2,2]) # ground truth\n",
+        "pred_y = np.array([2,2,1,2,1,3,2,3,2]) # prediction\n",
+        "\n",
+        "accuracy = accuracy_score(true_y,pred_y)\n",
+        "print(\"ground truth: {}\".format(true_y))\n",
+        "print(\"prediction: {}\".format(pred_y))\n",
+        "print(\"precision: {}\".format(accuracy))"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ground truth: [1 2 3 2 3 3 1 2 2]\n",
+            "prediction: [2 2 1 2 1 3 2 3 2]\n",
+            "precision: 0.4444444444444444\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "0ghJJb6tqooW",
         "colab_type": "text"
       },
