--- a/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
+++ b/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
@@ -116,7 +116,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Proportion of correct predictions"
+        "Proportion of correct classifications from overall number of cases"
       ]
     },
     {
@@ -182,7 +182,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "What proportion of positive identifications was actually correct?"
+        "Proportion of correct positive classifications from cases that are predicted as positive"
       ]
     },
     {
@@ -248,7 +248,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "What proportion of actual positives was identified correctly?"
+        "Proportion of correct positive classifications from cases that are actually positive"
       ]
     },
     {
