--- a/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
+++ b/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
@@ -133,11 +133,11 @@
       "metadata": {
         "id": "OJS0JeL9C1K4",
         "colab_type": "code",
+        "outputId": "51614b6a-8948-4f42-8d1c-046c0f31592c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "51614b6a-8948-4f42-8d1c-046c0f31592c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -152,7 +152,7 @@
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(accuracy))"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,11 +199,11 @@
       "metadata": {
         "id": "gsQejXYitd8g",
         "colab_type": "code",
+        "outputId": "7bde8912-d1eb-454d-bc81-8e86b865e679",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "7bde8912-d1eb-454d-bc81-8e86b865e679"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -218,7 +218,7 @@
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(precision))"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,11 +265,11 @@
       "metadata": {
         "id": "INLgmhiMwlLw",
         "colab_type": "code",
+        "outputId": "2b416cbd-5154-43c5-ed78-16c8b9527e4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "2b416cbd-5154-43c5-ed78-16c8b9527e4c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -284,7 +284,7 @@
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(recall))"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,18 +324,18 @@
       },
       "cell_type": "markdown",
       "source": [
-        "$F_1 =2\\cdot\\frac{precision \\cdot recall}{precision + recal}$"
+        "$F_1 =2\\cdot\\frac{precision \\cdot recall}{precision + recall}$"
       ]
     },
     {
       "metadata": {
         "id": "aHpa0BuMp3n6",
         "colab_type": "code",
+        "outputId": "f0a92dc5-058c-40c0-9542-6dc382371326",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "f0a92dc5-058c-40c0-9542-6dc382371326"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -350,7 +350,7 @@
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(f1_score))"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
