--- a/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
+++ b/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
@@ -101,6 +101,18 @@
     },
     {
       "metadata": {
+        "id": "aY2HohQXZ5k3",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Examples below assume:\n",
+        "*   2 classes: 0, 1\n",
+        "*   wrt class 0: TP = 1, TN = 2,  FP = 3, FN = 4"
+      ]
+    },
+    {
+      "metadata": {
         "id": "54B5_2wICthF",
         "colab_type": "text"
       },
@@ -144,8 +156,8 @@
         "from sklearn.metrics import accuracy_score\n",
         "import numpy as np\n",
         "\n",
-        "true_y = np.array([1,2,3,2,3,3,1,2,2]) # ground truth\n",
-        "pred_y = np.array([2,2,1,2,1,3,2,3,2]) # prediction\n",
+        "true_y = np.array([0,1,1,1,1,1,0,0,0,0]) # ground truth\n",
+        "pred_y = np.array([0,1,1,0,0,0,1,1,1,1]) # prediction\n",
         "\n",
         "accuracy = accuracy_score(true_y,pred_y)\n",
         "print(\"ground truth: {}\".format(true_y))\n",
@@ -199,7 +211,7 @@
       "metadata": {
         "id": "gsQejXYitd8g",
         "colab_type": "code",
-        "outputId": "7bde8912-d1eb-454d-bc81-8e86b865e679",
+        "outputId": "a3b70d18-bd18-4dd5-ac57-c9fab080df95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -210,22 +222,22 @@
         "from sklearn.metrics import precision_score\n",
         "import numpy as np\n",
         "\n",
-        "true_y = np.array([1,2,3,2,3,3,1,2,2]) # ground truth\n",
-        "pred_y = np.array([2,2,1,2,1,3,2,3,2]) # prediction\n",
+        "true_y = np.array([0,1,1,1,1,1,0,0,0,0]) # ground truth\n",
+        "pred_y = np.array([0,1,1,0,0,0,1,1,1,1]) # prediction\n",
         "\n",
         "precision = precision_score(true_y,pred_y,average='macro')\n",
         "print(\"ground truth: {}\".format(true_y))\n",
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(precision))"
       ],
-      "execution_count": 0,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "ground truth: [1 2 3 2 3 3 1 2 2]\n",
-            "prediction: [2 2 1 2 1 3 2 3 2]\n",
-            "precision: 0.3666666666666667\n"
+            "ground truth: [0 1 1 1 1 1 0 0 0 0]\n",
+            "prediction: [0 1 1 0 0 0 1 1 1 1]\n",
+            "precision: 0.29166666666666663\n"
           ],
           "name": "stdout"
         }
@@ -265,7 +277,7 @@
       "metadata": {
         "id": "INLgmhiMwlLw",
         "colab_type": "code",
-        "outputId": "2b416cbd-5154-43c5-ed78-16c8b9527e4c",
+        "outputId": "acfd9177-fbc1-4957-ff25-b42b3ffc58e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -276,22 +288,22 @@
         "from sklearn.metrics import recall_score\n",
         "import numpy as np\n",
         "\n",
-        "true_y = np.array([1,2,3,2,3,3,1,2,2]) # ground truth\n",
-        "pred_y = np.array([2,2,1,2,1,3,2,3,2]) # prediction\n",
+        "true_y = np.array([0,1,1,1,1,1,0,0,0,0]) # ground truth\n",
+        "pred_y = np.array([0,1,1,0,0,0,1,1,1,1]) # prediction\n",
         "\n",
         "recall = recall_score(true_y,pred_y,average='macro')\n",
         "print(\"ground truth: {}\".format(true_y))\n",
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(recall))"
       ],
-      "execution_count": 0,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "ground truth: [1 2 3 2 3 3 1 2 2]\n",
-            "prediction: [2 2 1 2 1 3 2 3 2]\n",
-            "precision: 0.3611111111111111\n"
+            "ground truth: [0 1 1 1 1 1 0 0 0 0]\n",
+            "prediction: [0 1 1 0 0 0 1 1 1 1]\n",
+            "precision: 0.30000000000000004\n"
           ],
           "name": "stdout"
         }
@@ -331,7 +343,7 @@
       "metadata": {
         "id": "aHpa0BuMp3n6",
         "colab_type": "code",
-        "outputId": "f0a92dc5-058c-40c0-9542-6dc382371326",
+        "outputId": "3b3686a5-51ab-413d-83d0-6d5115909185",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -342,22 +354,22 @@
         "from sklearn.metrics import f1_score\n",
         "import numpy as np\n",
         "\n",
-        "true_y = np.array([1,2,3,2,3,3,1,2,2]) # ground truth\n",
-        "pred_y = np.array([2,2,1,2,1,3,2,3,2]) # prediction\n",
+        "true_y = np.array([0,1,1,1,1,1,0,0,0,0]) # ground truth\n",
+        "pred_y = np.array([0,1,1,0,0,0,1,1,1,1]) # prediction\n",
         "\n",
         "f1_score = f1_score(true_y,pred_y,average='macro')\n",
         "print(\"ground truth: {}\".format(true_y))\n",
         "print(\"prediction: {}\".format(pred_y))\n",
         "print(\"precision: {}\".format(f1_score))"
       ],
-      "execution_count": 0,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "ground truth: [1 2 3 2 3 3 1 2 2]\n",
-            "prediction: [2 2 1 2 1 3 2 3 2]\n",
-            "precision: 0.35555555555555546\n"
+            "ground truth: [0 1 1 1 1 1 0 0 0 0]\n",
+            "prediction: [0 1 1 0 0 0 1 1 1 1]\n",
+            "precision: 0.29292929292929293\n"
           ],
           "name": "stdout"
         }
