--- a/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
+++ b/CHAPTER_10_Machine_Learning_for_Computer_Vision.ipynb
@@ -42,7 +42,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Tackles basic topis on machine learning. Has examples for computer vision."
+        "Tackles basic topics on machine learning. Has examples for computer vision."
       ]
     },
     {
