--- a/CHAPTER_08_3D_Computer_Vision.ipynb
+++ b/CHAPTER_08_3D_Computer_Vision.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Chapter 06: 3D Computer Vision**"
+        "# **Chapter 08: 3D Computer Vision**"
       ]
     },
     {
@@ -44,7 +44,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Discussion of computer vision through geometrical perspective."
+        "Discussion of computer vision through a geometrical perspective."
       ]
     },
     {
